# iubs2k

./: CMakeLists.txt  dependencies.cmake  project_options.cmake
cmake/: lto.cmake  sanitizers.cmake  warnings.cmake
src/: CMakeLists.txt
src/assembler/: CMakeLists.txt  assembler.cpp  instruction.cpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/assembler/include/assembler/: assembler.hpp  error.hpp  instruction.hpp  operand.hpp  source_location.hpp  token.hpp
src/common/: CMakeLists.txt  instruction.cpp
src/common/include/common/: common.hpp  instruction.hpp  opcode.hpp  pointer.hpp  register.hpp
src/emulator/: CMakeLists.txt  emulator.cpp
src/emulator/include/emulator/: emulator.hpp  memory_mapped_device.hpp  text_device.hpp
src/gui/: CMakeLists.txt  gui.cpp
src/gui/include/gui/: gui.hpp
src/main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
